[tool.poetry]
name = "nw-ssh"
version = "1.0.4"
description = "Simple ssh client with asyncssh for network devices"
authors = ["dei"]
readme = "README.md"
keywords = ['ssh', 'network']
license = "MIT"
repository = "https://github.com/kthrdei/nw-ssh"
homepage = "https://github.com/kthrdei/nw-ssh"

[tool.poetry.dependencies]
python = "^3.7"
asyncssh = "^2.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
